--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -3,11 +3,16 @@ name: Build and Push Docker Image to AWS ECR
 on:
     workflow_call:
         inputs:
+            dockerfile:
+                description: 'Path of the Dockerfile'
+                required: false
+                type: string
+                default: 'Dockerfile'
             dockerfile-path:
                 description: 'Path of the Dockerfile'
                 required: false
                 type: string
-                default: './Dockerfile'
+                default: '.'
             build_context:
                 description: 'Docker build context'
                 required: false
@@ -24,29 +29,19 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v4
-
             
             - name: Get Commit Sha
               id: var
               run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-            - name: Extract Branch Name
-              shell: bash
-              id: extract_branch
-              run: |
-                echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
                             
-            - name: Build and Push Image to ECR
-              uses: anilrajrimal1/aws-ecr-docker-builder-action@v1.0.0
+            - uses: actions/checkout@v4
+            - uses: docker://ghcr.io/kciter/aws-ecr-action:latest
               with:
-                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    AWS_REGION: ${{ env.AWS_REGION }}
-                    ECR_REGISTRY: ${{ secrets.AWS_ECR_REGISTRY }}
-                    ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
-                    BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
-                    IMAGE_TAG: ${{ steps.var.outputs.short_sha }}
-                    DOCKERFILE_PATH: ${{ inputs.dockerfile-path }}
-                    BUILD_CONTEXT: ${{ inputs.build_context }}
-
-            
+                access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+                repo: ${{ secrets.AWS_ECR_REPOSITORY }}
+                region: ${{ env.AWS_REGION }}
+                tags: latest, ${{ steps.var.outputs.short_sha }}    
+                dockerfile: ${{ inputs.dockerfile-path }}
+                build_context: ${{ inputs.build_context }}  
