--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -4,7 +4,7 @@ on:
     workflow_call:
         inputs:
             dockerfile:
-                description: 'Path of the Dockerfile'
+                description: 'File Name of the Dockerfile'
                 required: false
                 type: string
                 default: 'Dockerfile'
@@ -43,5 +43,5 @@ jobs:
                 repo: ${{ secrets.AWS_ECR_REPOSITORY }}
                 region: ${{ env.AWS_REGION }}
                 tags: latest, ${{ steps.var.outputs.short_sha }}    
-                dockerfile: ${{ inputs.dockerfile-path }}
+                dockerfile: ${{ inputs.dockerfile }}
                 build_context: ${{ inputs.build_context }}  
