--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -34,14 +34,15 @@ jobs:
               id: var
               run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
                             
-            - uses: actions/checkout@v4
-            - uses: docker://ghcr.io/kciter/aws-ecr-action:latest
+            - name: Build and Push to ECR
+              uses: docker://ghcr.io/kciter/aws-ecr-action:latest
               with:
                 access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                 secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                 account_id: ${{ secrets.AWS_ACCOUNT_ID }}
                 repo: ${{ secrets.AWS_ECR_REPOSITORY }}
                 region: ${{ env.AWS_REGION }}
-                tags: latest, ${{ steps.var.outputs.short_sha }}    
+                tags: latest,${{ steps.var.outputs.short_sha }}
+                path: ${{ inputs.dockerfile-path }}
                 dockerfile: ${{ inputs.dockerfile }}
-                build_context: ${{ inputs.build_context }}  
+                build_context: ${{ inputs.build_context }}
