--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -18,7 +18,6 @@ on:
                 required: false
                 type: string
                 default: '.'
-
 env:
     AWS_REGION: eu-west-3
 
@@ -31,30 +30,48 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Get Commit Sha
-              id: var
+              id: vars
               run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-                            
-            - name: Debug inputs
-              run: |
-                    echo "=== DEBUG INPUTS ==="
-                    echo "dockerfile: ${{ inputs.dockerfile }}"
-                    echo "dockerfile-path: ${{ inputs.dockerfile-path }}"
-                    echo "build_context: ${{ inputs.build_context }}"
-                    echo "=== FILES ==="
-                    ls -la
-                    echo "=== DOCKERFILE ==="
-                    cat ${{ inputs.dockerfile }} || echo "Dockerfile not found!"
-
-
-            - name: Build and Push to ECR
-              uses: docker://ghcr.io/kciter/aws-ecr-action:latest
+            
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v4
               with:
-                access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                account_id: ${{ secrets.AWS_ACCOUNT_ID }}
-                repo: ${{ secrets.AWS_ECR_REPOSITORY }}
-                region: ${{ env.AWS_REGION }}
-                tags: latest,${{ steps.var.outputs.short_sha }}
-                path: ${{ inputs.dockerfile-path }}
-                dockerfile: ${{ inputs.dockerfile }}
-                build_context: ${{ inputs.build_context }}
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ${{ env.AWS_REGION }}
+            
+            - name: Login to Amazon ECR
+              id: login-ecr
+              uses: aws-actions/amazon-ecr-login@v2
+            
+            - name: Build, tag, and push image to Amazon ECR
+              env:
+                ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+                ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
+                IMAGE_TAG_LATEST: latest
+                IMAGE_TAG_SHA: ${{ steps.vars.outputs.short_sha }}
+              run: |
+                # Construire le chemin du Dockerfile
+                if [ "${{ inputs.dockerfile-path }}" = "." ]; then
+                  DOCKERFILE_PATH="${{ inputs.dockerfile }}"
+                else
+                  DOCKERFILE_PATH="${{ inputs.dockerfile-path }}/${{ inputs.dockerfile }}"
+                fi
+                
+                echo "🔨 Building Docker image..."
+                echo "📄 Dockerfile: $DOCKERFILE_PATH"
+                echo "📂 Build context: ${{ inputs.build_context }}"
+                
+                docker build \
+                  -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST \
+                  -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA \
+                  -f $DOCKERFILE_PATH \
+                  ${{ inputs.build_context }}
+                
+                echo "📤 Pushing images to ECR..."
+                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
+                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA
+                
+                echo "✅ Images pushed successfully!"
+                echo "🏷️  Latest: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST"
+                echo "🏷️  SHA: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA"
