--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -1,5 +1,4 @@
 name: Build and Push Docker Image to AWS ECR
-
 on:
     workflow_call:
         inputs:
@@ -33,6 +32,9 @@ jobs:
               id: vars
               run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
             
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
@@ -44,34 +46,20 @@ jobs:
               id: login-ecr
               uses: aws-actions/amazon-ecr-login@v2
             
-            - name: Build, tag, and push image to Amazon ECR
-              env:
-                ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
-                IMAGE_TAG_LATEST: latest
-                IMAGE_TAG_SHA: ${{ steps.vars.outputs.short_sha }}
+            - name: Build and push to Amazon ECR
+              uses: docker/build-push-action@v5
+              with:
+                context: ${{ inputs.build_context }}
+                file: ${{ inputs.dockerfile-path }}/${{ inputs.dockerfile }}
+                push: true
+                tags: |
+                  ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:latest
+                  ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:${{ steps.vars.outputs.short_sha }}
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
+            
+            - name: Image Summary
               run: |
-                # Construire le chemin du Dockerfile
-                if [ "${{ inputs.dockerfile-path }}" = "." ]; then
-                  DOCKERFILE_PATH="${{ inputs.dockerfile }}"
-                else
-                  DOCKERFILE_PATH="${{ inputs.dockerfile-path }}/${{ inputs.dockerfile }}"
-                fi
-                
-                echo "🔨 Building Docker image..."
-                echo "📄 Dockerfile: $DOCKERFILE_PATH"
-                echo "📂 Build context: ${{ inputs.build_context }}"
-                
-                docker build \
-                  -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST \
-                  -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA \
-                  -f $DOCKERFILE_PATH \
-                  ${{ inputs.build_context }}
-                
-                echo "📤 Pushing images to ECR..."
-                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
-                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA
-                
                 echo "✅ Images pushed successfully!"
-                echo "🏷️  Latest: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST"
-                echo "🏷️  SHA: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA"
+                echo "🏷️  Latest: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:latest"
+                echo "🏷️  SHA: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:${{ steps.vars.outputs.short_sha }}"
