--- a/.github/workflows/docker-build-and-push-AWS-ECR.yml
+++ b/.github/workflows/docker-build-and-push-AWS-ECR.yml
@@ -46,6 +46,11 @@ jobs:
               id: login-ecr
               uses: aws-actions/amazon-ecr-login@v2
             
+            - name: Extract metadata
+              id: meta
+              run: |
+                echo "image_uri=${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}" >> $GITHUB_OUTPUT
+            
             - name: Build and push to Amazon ECR
               uses: docker/build-push-action@v5
               with:
@@ -53,11 +58,13 @@ jobs:
                 file: ${{ inputs.dockerfile-path }}/${{ inputs.dockerfile }}
                 push: true
                 tags: |
-                  ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:${{ steps.vars.outputs.short_sha }}
+                  ${{ steps.meta.outputs.image_uri }}:latest
+                  ${{ steps.meta.outputs.image_uri }}:${{ steps.vars.outputs.short_sha }}
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
             
             - name: Image Summary
               run: |
                 echo "✅ Images pushed successfully!"
-                echo "🏷️  SHA: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_REPOSITORY }}:${{ steps.vars.outputs.short_sha }}"
+                echo "🏷️  Latest: ${{ steps.meta.outputs.image_uri }}:latest"
+                echo "🏷️  SHA: ${{ steps.meta.outputs.image_uri }}:${{ steps.vars.outputs.short_sha }}"
